--- a/student.ipynb
+++ b/student.ipynb
@@ -10,8 +10,7 @@
     "* Student name: Margret Nyairo \n",
     "* Student pace: self paced / part time / full time\n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "* Instructor name:Mwikali \n"
    ]
   },
   {
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +260,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +335,7 @@
        "(90348, 31)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +365,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +416,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +466,7 @@
        "(90348, 23)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +509,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +554,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>90348.000000</td>\n",
+       "      <td>82805.000000</td>\n",
        "      <td>77488.000000</td>\n",
        "      <td>76379.000000</td>\n",
        "      <td>76956.000000</td>\n",
@@ -563,7 +562,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.134347</td>\n",
+       "      <td>1.146585</td>\n",
        "      <td>0.647855</td>\n",
        "      <td>0.279881</td>\n",
        "      <td>0.357061</td>\n",
@@ -571,7 +570,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.429384</td>\n",
+       "      <td>0.446510</td>\n",
        "      <td>5.485960</td>\n",
        "      <td>1.544084</td>\n",
        "      <td>2.235625</td>\n",
@@ -623,9 +622,9 @@
       ],
       "text/plain": [
        "       Number.of.Engines  Total.Fatal.Injuries  Total.Serious.Injuries  \\\n",
-       "count       90348.000000          77488.000000            76379.000000   \n",
-       "mean            1.134347              0.647855                0.279881   \n",
-       "std             0.429384              5.485960                1.544084   \n",
+       "count       82805.000000          77488.000000            76379.000000   \n",
+       "mean            1.146585              0.647855                0.279881   \n",
+       "std             0.446510              5.485960                1.544084   \n",
        "min             0.000000              0.000000                0.000000   \n",
        "25%             1.000000              0.000000                0.000000   \n",
        "50%             1.000000              0.000000                0.000000   \n",
@@ -643,7 +642,7 @@
        "max              380.000000       699.000000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -697,13 +696,127 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Non-Fatal     67357\n",
+       "Fatal(1)       6167\n",
+       "Fatal          5262\n",
+       "Fatal(2)       3711\n",
+       "Incident       2219\n",
+       "              ...  \n",
+       "Fatal(117)        1\n",
+       "Fatal(73)         1\n",
+       "Fatal(217)        1\n",
+       "Fatal(169)        1\n",
+       "Fatal(111)        1\n",
+       "Name: Injury.Severity, Length: 109, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# understanding categorcal distribution for frequency tables\n",
+    "df['Injury.Severity'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weather.Condition</th>\n",
+       "      <th>Total.Fatal.Injuries</th>\n",
+       "      <th>Total.Serious.Injuries</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IMC</td>\n",
+       "      <td>2.115963</td>\n",
+       "      <td>0.419777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>UNK</td>\n",
+       "      <td>3.179657</td>\n",
+       "      <td>0.255405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Unk</td>\n",
+       "      <td>1.244275</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VMC</td>\n",
+       "      <td>0.383178</td>\n",
+       "      <td>0.263549</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Weather.Condition  Total.Fatal.Injuries  Total.Serious.Injuries\n",
+       "0               IMC              2.115963                0.419777\n",
+       "1               UNK              3.179657                0.255405\n",
+       "2               Unk              1.244275                0.500000\n",
+       "3               VMC              0.383178                0.263549"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data aggragation\n",
+    "grouped_df = df.groupby('Weather.Condition').agg({\n",
+    "    'Total.Fatal.Injuries': 'mean',\n",
+    "    'Total.Serious.Injuries': 'mean'\n",
+    "}).reset_index()\n",
+    "grouped_df\n"
    ]
   }
  ],
