--- a/student.ipynb
+++ b/student.ipynb
@@ -9,7 +9,6 @@
     "Please fill out:\n",
     "* Student name: Margret Nyairo \n",
     "* Student pace: Full time\n",
-    "* Scheduled project review date/time: \n",
     "* Instructor name:Maryann Mwikali \n"
    ]
   },
@@ -17,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aircraft Accidents Analysis\n",
+    "# Aviation Data Analysis\n",
     "\n",
     "## Business Understanding\n",
     "\n",
@@ -30,6 +29,7 @@
     "\n",
     "### Problem Statement\n",
     "The project aims to determine the key factors that causes aircrafts crash that causes fatalities in the United States.It specifically aim to:\n",
+    "\n",
     " Identify significant features that contribute to aircraft crashes.\n",
     " Explore other correlated features to aircraft crashes.\n",
     "\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -526,7 +526,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "(90348, 31)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "(90348, 23)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "max              380.000000       699.000000  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "[90348 rows x 5 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1178,15 +1178,15 @@
        "Fatal(2)       3711\n",
        "Incident       2219\n",
        "              ...  \n",
-       "Fatal(64)         1\n",
-       "Fatal(78)         1\n",
        "Fatal(49)         1\n",
-       "Fatal(117)        1\n",
-       "Fatal(138)        1\n",
+       "Fatal(57)         1\n",
+       "Fatal(125)        1\n",
+       "Fatal(64)         1\n",
+       "Fatal(83)         1\n",
        "Name: Injury.Severity, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1316,7 +1316,7 @@
        "3               VMC              0.330621                0.225709"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1431,7 +1431,7 @@
        "8532  PA-28-181                 381.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,9 +1445,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1481,17 +1481,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Saving cleaned data is beneficial for further analysis."
+    "### Saving cleaned data is beneficial for further analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
